[package]
name = "bis2"
version = "0.1.0"
authors = ["Jerome Rasky <jyrome.112@gmail.com>"]
links = "bis_c"
build = "build.rs"

[dependencies]
libc = "*"
unicode-width = "*"
term = "*"
log = "*"
env_logger = "*"
threadpool = "*"
flx = "*"
serde = "*"
serde_json = "*"

[build-dependencies]
serde_codegen = "0.8"
gcc = "*"
