[package]
name = "bis2"
version = "0.1.0"
authors = ["Jerome Rasky <jyrome.112@gmail.com>"]
links = "bis_c"
build = "build.rs"

[dependencies]
libc = "*"
unicode-width = "*"
term = "*"
log = "*"
env_logger = "*"
threadpool = "*"
flx = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"

[build-dependencies]
gcc = "*"

[features]
# Disable the use of an ioctl to insert input on the terminal. When this feature is active,
# output is printed on stderr instead. Manipulate READLINE_LINE and READLINE_POINT to report
# the output to the user.
no_ioctl = []